--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "vuex": "^3.0.1"
     },
     "dependencies": {
+        "vee-validate": "^3.0.8",
         "vue-axios": "^2.1.4"
     }
 }
