--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "laravel-mix-alias": "^1.0.2",
         "lodash": "^4.17.13",
         "moment": "^2.24.0",
+        "node-sass": "^4.12.0",
         "numeral": "^2.0.6",
         "resolve-url-loader": "2.3.1",
         "sass": "^1.20.1",
