--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     },
     "dependencies": {
         "vee-validate": "^3.0.8",
-        "vue-axios": "^2.1.4"
+        "vue-axios": "^2.1.4",
+        "vue-html-to-paper": "^1.1.1",
+        "vue-print-nb": "^1.4.0"
     }
 }
