--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "vuex": "^3.0.1"
     },
     "dependencies": {
+        "gutenberg-css": "^0.5.0",
         "vee-validate": "^3.0.8",
         "vue-axios": "^2.1.4",
         "vue-html-to-paper": "^1.1.1",
