--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
         "laravel-mix-alias": "^1.0.2",
         "lodash": "^4.17.13",
         "moment": "^2.24.0",
-        "node-sass": "^4.12.0",
+        "node-sass": "^4.13.0",
         "numeral": "^2.0.6",
         "resolve-url-loader": "2.3.1",
         "sass": "^1.20.1",
-        "sass-loader": "7.*",
+        "sass-loader": "^7.3.1",
         "vue": "^2.5.17",
         "vue-chartjs": "^3.4.2",
+        "vue-loader": "^15.7.2",
         "vue-router": "^3.1.2",
         "vue-template-compiler": "^2.6.10",
         "vuex": "^3.0.1"
