--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,15 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
+        "orangehill/iseed": "^2.6",
+        "oscarafdev/migrations-generator": "2.0.13",
         "tcg/voyager": "^1.3"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.2",
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
+        "laracasts/generators": "^1.1",
         "laravel/ui": "^1.0",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
