--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "@mdi/font": "^3.9.97",
+        "@mdi/font": "^4.9.95",
         "axios": "^0.19.2",
         "buefy": "^0.8.11",
-        "bulma": "^0.7.5",
+        "bulma": "^0.8.0",
         "chart.js": "^2.9.3",
-        "cross-env": "^5.1",
-        "laravel-mix": "^4.0.7",
+        "cross-env": "^7.0.0",
+        "laravel-mix": "^5.0.1",
         "laravel-mix-alias": "^1.0.2",
-        "lodash": "^4.17.13",
+        "lodash": "^4.17.15",
         "moment": "^2.24.0",
         "node-sass": "^4.13.1",
         "numeral": "^2.0.6",
-        "resolve-url-loader": "2.3.1",
+        "resolve-url-loader": "^3.1.1",
         "sass": "^1.25.0",
-        "sass-loader": "^7.3.1",
+        "sass-loader": "^8.0.2",
         "vue": "^2.6.11",
         "vue-chartjs": "^3.5.0",
         "vue-loader": "^15.9.0",
