--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "vue-axios": "^2.1.5",
         "vue-excel-export": "^0.1.3",
         "vue-html-to-paper": "^1.3.0",
+        "vue-multiselect": "^2.1.6",
         "vue-print-nb": "^1.5.0"
     }
 }
