--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     },
     "dependencies": {
         "gutenberg-css": "^0.5.0",
+        "jspdf": "^1.5.3",
         "vee-validate": "^3.2.5",
         "vue-axios": "^2.1.5",
         "vue-excel-export": "^0.1.3",
