--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "vuex": "^3.5.1"
     },
     "dependencies": {
+        "apexcharts": "^3.22.2",
         "gutenberg-css": "^0.5.0",
         "jspdf": "^1.5.3",
         "jspdf-customfonts": "0.0.4-rc.4",
